# BurnWasmDemo

./: Cargo.toml
src/: lib.rs  main.rs  model.rs  state.rs
web/: index.html
