[package]
name = "burn_app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
burn = { version = "0.15.0", default-features= false, features = ["wgpu"] }
cubecl-runtime = { version = "0.3.0", features = ["channel-mpsc"] }
wasm-bindgen = "0.2.95"
wasm-bindgen-futures = "0.4.45"
js-sys = "0.3.72"

